--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,31 @@
 .App {
   text-align: center;
+  height:100vh;
+  width:100vw;
+  display: flex;
+  flex-flow: row nowrap;}
+.sidebar {
+  width: 25%;
 }
-
+#search {
+  width: 100%;
+  height: 2rem;
+  font-size: 1rem;
+}
+.venueList {
+  padding: 1rem;}
+.listItem {
+  list-style: none;
+  font-size: 1rem;
+  padding: .5rem;
+  margin-top: 1rem;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  background: #7a1616;
+  color:white;
+  display: flex;
+  align-items: center;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
